--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -4,10 +4,15 @@
   background-color: $main-color;
   border-radius: 5px;
   border: none;
-
   font-weight: 500;
   font-size: 12px;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
+  &_main {
+    margin-top: 60px;
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+  }
 }
