--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,6 +2,12 @@
   min-height: 650px;
   padding: 21px 0 93px 0;
   background: url(../img/main.jpg) center (center/cover) no-repeat;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 90px;
+  }
   &__header {
     font-weight: 700;
     font-size: 42px;
@@ -14,10 +20,35 @@
     text-transform: uppercase;
     color: #ffffff;
   }
+  &__icons {
+    margin-top: 60px;
+    width: 425px;
+    display: flex;
+    justify-content: space-between;
+  }
+
   &__icon {
+    width: 106px;
     font-weight: 500;
     font-size: 14px;
     line-height: 14px;
     color: #ffffff;
+    text-align: center;
+    img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 20px;
+    }
+  }
+  &__link {
+    margin-top: 8px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #ffffff;
+    a {
+      color: #ffffff;
+      text-transform: uppercase;
+      text-decoration: underline;
+    }
   }
 }
